test/conformance/manifests/should-fail/background-userinfo-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-userinfo-1
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: ns-vars
    match:
      any:
      - resources:
          kinds:
            - Pod
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            foo: "{{request.roles}}"
